[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rtorrent-rpc"
version = "0.0.9"
description = "Typed rtorrent rpc client"
authors = ["Trim21 <i@trim21.me>"]
readme = 'readme.md'
repository = 'https://github.com/trim21/rtorrent-rpc'
license = 'MIT'
packages = [{ include = 'rtorrent_rpc' }]
keywords = ['rtorrent', 'rpc']
classifiers = [
    'Intended Audience :: Developers',
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: Implementation :: CPython',
]

[tool.poetry.dependencies]
python = "^3.10"
# dependencies
typing-extensions = ">=4.1.0"
bencode-py = "^4.0.0"

[tool.poetry.group.docs.dependencies]
sphinx = { version = "^7.0.0", python = "^3.9" }
furo = { version = "2023.05.20", python = "^3.9" }

[tool.poetry.group.dev.dependencies]
yarl = "==1.9.2"
# tests
pytest = "==7.4.0"
pytest-github-actions-annotate-failures = "==0.2.0"
coverage = "==7.2.7"

# linter and formatter
pre-commit = { version = "==3.3.3", markers = "implementation_name != 'pypy'", python = "^3.9" }
mypy = { version = "==1.4.1", markers = "implementation_name != 'pypy'", python = "^3.9" }
ruff = "0.0.275"

[tool.poetry-plugin-bump]
commit_msg = 'bump: v{version}'

[tool.pytest.ini_options]
addopts = '-rav -Werror'

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
show_error_codes = true

[tool.black]
target-version = ['py310']


[tool.ruff]
extend-exclude = ["docs"]
select = [
    "B",
    "C",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "W",
    "BLE",
    "EXE",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "YTT",
]

ignore = [
    'PLR0911',
    'INP001',
    'N806',
    'N802',
    'N803',
    'E501',
    'BLE001',
    'RUF002',
    'S324',
    'S301',
    'S314',
    'S101',
    'N815',
    'S104',
    'C901',
    'PLR0913',
    'RUF001',
    'SIM108',
    'TCH003',
    'RUF003',
    'RET504',
    'TRY300',
    'TRY003',
    'TRY201',
    'TRY301',
    'PLR0912',
    'PLR0915',
    'PLR2004',
    'PGH003',
]

target-version = "py310"
