[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rtorrent-rpc"
version = "0.6.0"
description = "Typed rtorrent rpc client"
authors = ["Trim21 <i@trim21.me>"]
readme = 'readme.md'
repository = 'https://github.com/trim21/rtorrent-rpc'
license = 'MIT'
packages = [{ include = 'rtorrent_rpc' }]
keywords = ['rtorrent', 'rpc']
classifiers = [
    'Intended Audience :: Developers',
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3 :: Only',
]

[tool.poetry.dependencies]
python = "^3.8"
# dependencies
typing-extensions = ">=4.7.1"
bencode2 = ">=0.0.6,<1"
urllib3 = "^2.2.1"

[tool.poetry.group.docs.dependencies]
sphinx = { version = "^7.0.0", python = "^3.9" }
furo = { version = "^2024.0.0", python = "^3.9" }

[tool.poetry.group.dev.dependencies]
# tests
pytest = "==8.1.1"
pytest-github-actions-annotate-failures = "==0.2.0"
coverage = "==7.5.0"

# linter and formatter
pre-commit = { version = "==3.7.0", markers = "implementation_name != 'pypy'", python = "^3.9" }
#mypy = { version = "==1.4.1", markers = "implementation_name != 'pypy'", python = "^3.9" }
sphinx-autobuild = { version = "2024.4.16", python = "^3.9" }
mypy = { version = "1.10.0", python = "^3.9" }
orjson = "3.10.1"

[tool.poetry-plugin-bump]
commit_msg = 'bump: v{version}'

[tool.pytest.ini_options]
addopts = '-rav -Werror'

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = true
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
show_error_codes = true

platform = 'unix'

[tool.black]
target-version = ['py38']

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = [
    "B",
    "C",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "W",
    "BLE",
    "EXE",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "YTT",
]

ignore = [
    'PLR0911',
    'INP001',
    'N806',
    'N802',
    'N803',
    'E501',
    'BLE001',
    'RUF002',
    'S324',
    'S301',
    'S314',
    'S101',
    'N815',
    'S104',
    'C901',
    'PLR0913',
    'RUF001',
    'SIM108',
    'TCH003',
    'RUF003',
    'RET504',
    'TRY300',
    'TRY003',
    'TRY201',
    'TRY301',
    'PLR0912',
    'PLR0915',
    'PLR2004',
    'PGH003',
]
